# RAG_based_Chatbot_API

./: .gitignore  App.py  MIT LICENSE  README.md  faiss_index.dvc  logger.py  pyproject.toml  requirements.txt
Chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chatbot/: data_ingestion.py  embeddings.py  model.py
